--- a/multi_obj_tracker/CMakeLists.txt
+++ b/multi_obj_tracker/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(decision)
+project(multi_obj_tracker)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -8,9 +8,9 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   roscpp
   rospy
+  sensor_msgs
   std_msgs
   px_comm
-  OpenCV
 )
 
 ## System dependencies are found with CMake's conventions
@@ -47,11 +47,11 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
+ add_message_files(
+   FILES
+   RoiArray.msg
 #   Message2.msg
-# )
+ )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -68,10 +68,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   geometry_msgs#   std_msgs
-# )
+ generate_messages(
+   DEPENDENCIES
+   sensor_msgs
+   std_msgs
+ )
 
 ###################################
 ## catkin specific configuration ##
@@ -83,12 +84,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-
- # INCLUDE_DIRS include
-
-  CATKIN_DEPENDS roscpp std_msgs geometry_msgs   simple_obstacle_avoidance   px4flow_hover
-#  LIBRARIES decision
-#  CATKIN_DEPENDS geometry_msgs roscpp rospy std_msgs
+#  INCLUDE_DIRS include
+#  LIBRARIES multi_obj_tracker
+#  CATKIN_DEPENDS geometry_msgs roscpp rospy sensor_msgs std_msgs
 #  DEPENDS system_lib
 )
 
@@ -103,23 +101,44 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
+
+###########################################################################
 ## Declare a cpp library
-# add_library(decision
-#   src/${PROJECT_NAME}/decision.cpp
+# add_library(multi_obj_tracker
+#   src/${PROJECT_NAME}/multi_obj_tracker.cpp
 # )
 
 ## Declare a cpp executable
- add_executable(decision_node src/decision.cpp)
+ add_executable(tracker_node src/tracker.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
- add_dependencies(decision_node decision_generate_messages_cpp)
+ add_dependencies(tracker_node multi_obj_tracker_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
- target_link_libraries(decision_node
+ target_link_libraries(tracker_node
    ${catkin_LIBRARIES}
-   ${OpenCV_LIBS}
  )
+
+
+
+##########################################################################
+## Declare a cpp library
+# add_library(multi_obj_tracker
+#   src/${PROJECT_NAME}/multi_obj_tracker.cpp
+# )
+
+## Declare a cpp executable
+# add_executable(multi_obj_tracker_node src/multi_obj_tracker_node.cpp)
+
+## Add cmake target dependencies of the executable/library
+## as an example, message headers may need to be generated before nodes
+# add_dependencies(multi_obj_tracker_node multi_obj_tracker_generate_messages_cpp)
+
+## Specify libraries to link a library or executable target against
+# target_link_libraries(multi_obj_tracker_node
+#   ${catkin_LIBRARIES}
+# )
 
 #############
 ## Install ##
@@ -136,7 +155,7 @@ include_directories(
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS decision decision_node
+# install(TARGETS multi_obj_tracker multi_obj_tracker_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -161,7 +180,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_decision.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_multi_obj_tracker.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
